add caption cache

--- a/main/templates/demo3player.html
+++ b/main/templates/demo3player.html
@@ -81,7 +81,8 @@
                         }
                     }">
                     <p style="display: none;" id="caption_all">
-                        {{ message[ "captions" ] }}
+                        <!-- {{ message[ "captions" ] }} -->
+			
                     </p>
                     <p id="currentKeyword"></p>
                     <p id="caption"></p>
