--- a/main/static/demo3player.css
+++ b/main/static/demo3player.css
@@ -250,7 +250,7 @@ img {
   font-size: 12px;
 }
 .tooltip-inner {
-  font-family: Arial,sans-serif
+  font-family: Arial,sans-serif;
   font-weight: bold;
   background-color: #eeeeee !important;
   box-shadow: 0px 0px 5px white;
