--- a/main/templates/demo3player.html
+++ b/main/templates/demo3player.html
@@ -44,11 +44,28 @@
 <body>
     <audio src={{ message[ "episode_audio" ] }} id="song"></audio>
     <div class="container-fluid" style="background-color: #FCF7F4 ; height: 100%;">
+
+        <div class="lds-spinner"  id="onload" style="left: 50%; top: 50%;">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    
+
         <div class="row">
             <div class="col">
                 <p
                     style="position: absolute; width: 492px; height: 93px; left: -100px; top: 0px; font-family: Roboto; font-style: normal; font-weight: normal; font-size: 30px; line-height: 93px; color: #da3c36;">
-                    <a href="http://localhost:5000/"><b>PRSystem</b></a>
+                    <a href="http://localhost:5000/"><b>Spodify</b></a>
                 </p>
                 <!-- 這裡是幻燈片的部分，空白的地方模糊還沒有用好 -->
                 <div class="slideshow" style="position: relative;  overflow: hidden; border-radius: 15px;left: 50px;">
