--- a/main/templates/index_copy_V3.html
+++ b/main/templates/index_copy_V3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Spodify</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://unpkg.com/@meilisearch/instant-meilisearch/templates/basic_search.css" />
     <script src="https://kit.fontawesome.com/257e3ba356.js" crossorigin="anonymous"></script>
