--- a/main/templates/index_copy_V3.html
+++ b/main/templates/index_copy_V3.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  style="font-family: Verdana;">
   <head>
-    <title>Spodify</title>
+    <title>SPODify</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://unpkg.com/@meilisearch/instant-meilisearch/templates/basic_search.css" />
     <script src="https://kit.fontawesome.com/257e3ba356.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- font-family -->
+    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap" rel="stylesheet">
+   
 </head>
   
   <body>
